--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
    <head>
-       	<meta charset = "UTF-8">
-       	<title> TITULO </title>
+       	<meta charset = "utf-8">
+         <meta name="viewport" content="width=device-width, 
+         initial-scale=1,shrink-to-fit=no">
+         <!--Bootstrap CSS-->
+         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+
+         <title> TITULO </title>
    </head>
    <h2>HALLO</h2>
    <body>
    	<p>DASOAS</p>
+      <script src="node_modules/jquery/dist/jquery.min.js"></script>
+      <script src="node_modules/popper.js/dist/popper.min.js"></script>
+      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
    </body>
 </html>
