Fueron traducidas al espanhol algunas lineas de texto

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             </div>
             <div class = "col-sm-4">
                <h3>
-                  Aparelho reverso
+                  Aparato de tiempo reverso
                </h3>
                <p>
-                  Serve para voltar no tempo e desfazer todos seus erros e deslizes!
+                  Sirve para volver al pasado y saludar a tu abuelo! Claro que sin decirle quien sos.
                </p>
                <h3>
                   Hotel Resort
@@ -67,14 +67,14 @@
          <footer>
             <div class = "row"> 
                <div class = "col-sm-4 d-flex flex-column">
-                  <h3>Siga-nos em</h3>
+                  <h3>Siguenos en</h3>
                   <a href="http://youtube.com">youtube</a>
                   <a href="http://instagram.com">instagram</a>
                   <a href="http://x.com">x</a>
                </div>
                <div class ="col-sm-4">
                   <address>
-                     <h3>Escritorio central</h3>
+                     <h3>Oficina central</h3>
                      <p>Avda. Paulista 1064 q/San Martin</p>
                   </address>
                </div>
