Agrega nuevas funcionalidades como breadcrumb y navbar

--- a/about.html
+++ b/about.html
@@ -33,58 +33,13 @@
        <div class = "container">
          <nav aria-label="breadcrumb">
             <ol class = "breadcrumb">
-               <li class ="breadcrumb-item active" aria-current="page">Home</li>
+               <li class ="breadcrumb-item"><a href="./index.html">Home</a></li>
+               <li class ="breadcrumb-item active" aria-current="page">Nosotros</a></li>
             </ol>
          </nav>
-         <div class = "d-flex">
-            <div class = "col-sm-4">
-               <h3>
-                  Gadget expansionista
-                </h3>
-                <p>
-                  Serve para aumentar os espaços entre os atomos do objeto em expansão. 
-                </p>
-                <h3>
-                  Hotel Manantial
-               </h3>
-               
-               <p>
-                  Ubicado en el centro del Amazonas, te sorprendera ver lo que la naturaleza es capaz de crear, todo eso en un espacio seguro y a la vez inmerso.
-               </p>
-               <button href="#" class="btn btn-primary">Ir</button>
-                
-            </div>
-            <div class = "col-sm-4">
-               <h3>
-                  Dinamo surrealista
-               </h3>
-               <p>
-                  Serve para gerar energia com base em movimento, porem essa energia é transformada em energia escura no final do processo.
-               </p>
-               <h3>
-                  Hotel Isla
-               </h3>
-               <p>
-                  Ven a disfrutar de la paradisiaca Isla Rotten, ubicada a 100km de Hawai e con vistas fenomenales de volcanes activos y palmeras playeras.
-               </p>
-               <a href="#" class="btn btn-primary">Ir</a>
-            </div>
-            <div class = "col-sm-4">
-               <h3>
-                  Aparato de tiempo reverso
-               </h3>
-               <p>
-                  Sirve para volver al pasado y saludar a tu abuelo! Claro que sin decirle quien sos.
-               </p>
-               <h3>
-                  Hotel Resort
-               </h3>
-               <p>
-                  Escápate a este lujoso resort junto al lago, con actividades acuáticas y un spa para relajarte.
-               </p>
-               <a href="#" class="btn btn-primary">Ir</a>
-            </div>
-         </div>
+         <span>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga totam dolorem repudiandae dolorum unde. Nemo hic enim odio facilis veritatis minima sit nisi laborum libero autem, tenetur ad dignissimos quasi?
+         </span>
          <footer>
             <div class = "row"> 
                <div class = "col-sm-4 d-flex flex-column">
