--- a/contacto.html
+++ b/contacto.html
@@ -30,13 +30,61 @@
          <h1>Catalogue</h1>      
          <p>Aqui pode encontrar todo tipo do que esta procurando.</p>
        </div>
-       <div class = "container">
+       <div class = "container" style= "width: 100%;">
          <nav aria-label="breadcrumb">
             <ol class = "breadcrumb">
                <li class ="breadcrumb-item" aria-current="page">Home</li>
-               <li class = "breadcrumb-item active" aria-current="page">About</li>
+               <li class = "breadcrumb-item active" aria-current="page">Contacto</li>
             </ol>
          </nav>
+         <h1>
+            Dejame tu comentario
+         </h1>
+         <form style="width:100%;">
+            <div class="form-row">
+               <div class="form-group col-sm-6">
+                  <label>Nombre</label>
+                  <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
+               </div>
+               <div class="form-group col-sm-6">
+                  <label for="apellido">Apellido</label>
+                  <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
+               </div>
+            </div>
+            <div class="form-group">
+               <label for="email">Email</label>
+               <input type="email" class="form-control" id="email" placeholder="Ingrese su email">
+            </div>
+            <div class="form-row">
+               <div class="form-group col-sm-9">
+                  <label for="domicilio">Domicilio</label>
+                  <input type="text" class="form-control" id="domicilio" placeholder="Ingrese su domicilio">
+               </div>
+               <div class="form-group col-sm-3">
+                  <label for="estado">Estado</label>
+                  <select id="provincia">
+                     <option selected>Capital Federal</option>
+                     <option>Minas gerais</option>
+                     <option>Bahia</option>
+                     <option>Goias</option>
+                     <option>Rio grande do Sul</option>
+                     <option>Estado do Parana</option>
+                     <option>Amazonas</option>
+                  </select>
+               </div>
+            </div>
+            <div class="form-group">
+                <label for="comentario">Comentario</label>
+                <textarea id="comentario" class="form-control" rows="10"></textarea>
+            </div>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                    <label class="form-check-lable" for="gridCheck">Quiero que me contacten</label>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+         </form>
  
          <footer>
             <div class = "row"> 
