--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
          <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic/bootstrap.min.css">
          <title> TIMES </title>
    </head>
-   <body style="height: 3000px">
+   <body>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-         <a class="navbar-brand" href="index.html">Lines</a>
+         <a class="navbar-brand" href="#">Hoteles</a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
-         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active"><a class="nav-link" href="pizza.html">Pizza line</a></li> 
-              <li class="nav-item"><a class="nav-link" href="donuts.html">Donuts line</a></li> 
-              <li class="nav-item"><a class="nav-link" href="fit.html">Fit line</a></li> 
-            </ul>    
+              <li class="nav-item active"><a class="nav-link" href="#">Hoteles</a></li> 
+              <li class="nav-item"><a class="nav-link" href="./about.html">Nosotros</a></li> 
+              <li class="nav-item"><a class="nav-link" href="#">Precios</a></li> 
+              <li class="nav-item"><a class="nav-link" href="#">Terminos y condiciones</a></li> 
+              <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li> 
+            </ul>
          </div>
       </nav>   
       <div class="jumbotron" >
@@ -34,6 +36,7 @@
                <li class ="breadcrumb-item active" aria-current="page">Home</li>
             </ol>
          </nav>
+
          <div class = "d-flex">
             <div class = "col-sm-4">
                <h3>
@@ -83,7 +86,35 @@
                <a href="#" class="btn btn-primary">Ir</a>
             </div>
          </div>
-       
+         <footer>
+            <div class = "row"> 
+               <div class = "col-sm-4 d-flex flex-column">
+                  <h3>Siguenos en</h3>
+                  <a href="http://youtube.com">youtube</a>
+                  <a href="http://instagram.com">instagram</a>
+                  <a href="http://x.com">x</a>
+               </div>
+               <div class ="col-sm-4">
+                  <address>
+                     <h3>Oficina central</h3>
+                     <p>Avda. Paulista 1064 q/San Martin</p>
+                  </address>
+               </div>
+               <div class ="col-sm-4 d-flex flex-column align-items-end">
+                  <h3>
+                     Quer trabalhar conosco?
+                  </h3><br>
+                  <p>
+                     Mande-nos seu CV
+                  </p><br>
+                  <a href="#" class ="btn btn-primary">
+                     Aqui
+                  </a>
+
+               </div>
+
+         </footer>
+      
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/popper.js/dist/popper.min.js"></script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
