--- a/contacto.html
+++ b/contacto.html
@@ -42,11 +42,11 @@
          </h1>
          <form style="width:100%;">
             <div class="form-row">
-               <div class="form-group col-sm-6">
+               <div class="form-group col-md-6">
                   <label>Nombre</label>
                   <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
                </div>
-               <div class="form-group col-sm-6">
+               <div class="form-group col-md-6">
                   <label for="apellido">Apellido</label>
                   <input type="text" class="form-control" id="apellido" placeholder="Ingrese su apellido">
                </div>
@@ -60,6 +60,7 @@
                   <label for="domicilio">Domicilio</label>
                   <input type="text" class="form-control" id="domicilio" placeholder="Ingrese su domicilio">
                </div>
+               <br>
                <div class="form-group col-sm-3">
                   <label for="estado">Estado</label>
                   <select id="provincia">
