Agregado muchos features como card, seccion de precios e imagenes al catalogo

--- a/precios.html
+++ b/precios.html
@@ -18,32 +18,80 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active"><a class="nav-link" href="./index.html">Hoteles</a></li> 
+              <li class="nav-item"><a class="nav-link" href="./index.html">Hoteles</a></li> 
               <li class="nav-item"><a class="nav-link" href="./about.html">Nosotros</a></li> 
-              <li class="nav-item"><a class="nav-link" href="./precios.html">Precios</a></li> 
+              <li class="nav-item active"><a class="nav-link" href="./precios.html">Precios</a></li> 
               <li class="nav-item"><a class="nav-link" href="#">Terminos y condiciones</a></li> 
               <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li> 
             </ul>
          </div>
       </nav>   
+
       <div class="jumbotron" >
          <h1>Catalogue</h1>      
          <p>Aqui pode encontrar todo tipo do que esta procurando.</p>
-      </div>
-      <div>
-         <img src="banner-background-5.jpg" class="rounded mx-auto d-block"alt="background image">
-      </div>
-       <div class = "container">
-         <nav aria-label="breadcrumb">
+       </div>
+
+      <div class = "container">
+        <nav aria-label="breadcrumb">
             <ol class = "breadcrumb">
-               <li class ="breadcrumb-item" aria-current="page">Home</li>
-               <li class = "breadcrumb-item active" aria-current="page">About</li>
+              <li class ="breadcrumb-item" aria-current="page">Home</li>
+              <li class ="breadcrumb-item active" aria-current="page">Precios</li>
             </ol>
-         </nav>
-       </div>
-       <div>
-         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, accusantium aspernatur ullam neque consectetur ut impedit laboriosam. Dolorum in quibusdam aperiam aliquid ullam delectus natus voluptatum beatae, fugiat, esse quo!
-       </div>
+        </nav>
+      
+
+
+
+
+      <div class="table-responsive">
+        <table class="table table-striped">
+            <thead class="thead-dark">
+                <th> Calidad </th>
+                <th> Bono Hotel </th>
+                <th> AC DC Hotel </th>
+                <th> Bernabeu Hotel </th>
+                <th> Vice City Hotel </th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>N. Estrellas</td>
+                    <td><span class ="oi oi-star"></span></td>
+                    <td><span class ="oi oi-star"></span><span class ="oi oi-star"></span></td>
+                    <td><span class ="oi oi-star"></span><span class ="oi oi-star"></span><span class ="oi oi-star"></span></td>
+                    <td><span class ="oi oi-star"></span><span class ="oi oi-star"></span><span class ="oi oi-star"></span><span class ="oi oi-star"></span></td>
+                </tr>
+                <tr>
+                    <td> Precio </td>
+                    <td>100 $ </td>
+                    <td>200 $</td>
+                    <td>300 $</td>
+                    <td>400 $</td>
+                </tr>
+                <tr>
+                    <td> Ubicacion </td>
+                    <td> Dublin </td>
+                    <td> Sydney </td>
+                    <td> Madrid </td>
+                    <td> GTA's USA </td>
+                </tr> 
+            </tbody>
+        </table>
+        </div>
+        <div class="d-flex justify-content-center">
+            <div class="card" style="width: 18rem;">
+                <div class="card-header" style="background-color: violet; color:white">
+                    Pases
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Pase Gold</li>
+                    <li class="list-group-item">Pase Platino</li>
+                    <li class="list-group-item">Pase Plata</li>
+                </ul>
+            </div>
+
+     </div>
+
          <footer>
             <div class = "row"> 
                <div class = "col-sm-4 d-flex flex-column">
@@ -61,8 +109,8 @@
                <div class ="col-sm-4 d-flex flex-column align-items-end">
                   <h3>
                      Quer trabalhar conosco?
+                     <p>
                   </h3><br>
-                  <p>
                      Mande-nos seu CV
                   </p><br>
                   <a href="#" class ="btn btn-primary">
