Agregadas ciertas funcionalidades y pulidas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <div class="jumbotron" >
          <h1>Catalogue</h1>      
-         <p>Aqui pode encontrar todo tipo do que esta procurando.</p>
+         <p>"Cualquier gadget que puedas imaginar"</p>
        </div>
        <div class = "container">
          <nav aria-label="breadcrumb">
@@ -60,10 +60,10 @@
 
          <div class = "d-flex flex-wrap flex-row-reverse">
             <div class="card card-gadget d-flex flex-column justify-content-between ml-2">
+               <img class="card-img-top" src="expanse.jpg" alt="imagen de gadget exp.">
                <div class="card-body">
                   <h5 class = "card-title">Gadget expansionista</h5>
                   <h6 class="card-subtitle text-muted">Surreal</h6>
-                  <img class="card-img-top" src="expanse.jpg" alt="imagen de gadget exp.">
                   <p class="card-text">Sirve para aumentar los espacios entre los atomos del objeto en expansion.</p>               
                </div>
                <div>
@@ -72,10 +72,10 @@
             </div>
 
                <div class="card card-gadget d-flex flex-column justify-content-between ml-2">
+                  <img class="card-img-top" src="mask.jpg" alt="imagen de gadget exp.">
                   <div class="card-body">
                      <h5 class = "card-title">Mascara-generadora surrealista</h5>
                      <h6 class="card-subtitle text-muted">Surreal</h6>
-                     <img class="card-img-top" src="mask.jpg" alt="imagen de gadget exp.">
                      <p class="card-text">Sirve para transformar movimiento en energia, tiene la particularidad de ser compatible con energía oscura.</p>               
                   </div>
                   <div>
@@ -83,10 +83,10 @@
                   </div>
                </div>
                <div class="card card-gadget d-flex flex-column justify-content-between ml-2">
+                  <img class="card-img-top" src="machines-group.jpg" alt="imagen de gadget exp.">
                   <div class="card-body">
                      <h5 class = "card-title">Aparato de tiempo reverso</h5>
                      <h6 class="card-subtitle text-muted">Surreal</h6>
-                     <img class="card-img-top" src="machines-group.jpg" alt="imagen de gadget exp.">
                      <p class="card-text">
                         Sirve para volver al pasado y saludar a tu abuelo! Claro que sin decirle quien sos.
                      </p>               
