--- a/contacto.html
+++ b/contacto.html
@@ -18,17 +18,19 @@
          </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active"><a class="nav-link" href="#">Hoteles</a></li> 
+              <li class="nav-item active"><a class="nav-link" href="./index.html">Hoteles</a></li> 
               <li class="nav-item"><a class="nav-link" href="./about.html">Nosotros</a></li> 
-              <li class="nav-item"><a class="nav-link" href="#">Precios</a></li> 
+              <li class="nav-item"><a class="nav-link" href="./precios.html">Precios</a></li> 
               <li class="nav-item"><a class="nav-link" href="#">Terminos y condiciones</a></li> 
               <li class="nav-item"><a class="nav-link" href="./contacto.html">Contacto</a></li> 
             </ul>
          </div>
       </nav>   
       <div class="jumbotron" >
-         <h1>Catalogue</h1>      
-         <p>Aqui pode encontrar todo tipo do que esta procurando.</p>
+         <h1>Catalogue
+
+         </h1>      
+         <p style="font-style: italic;">"Cualquier gadget que puedas imaginar"</p>
        </div>
        <div class = "container" style= "width: 100%;">
          <nav aria-label="breadcrumb">
@@ -37,9 +39,12 @@
                <li class = "breadcrumb-item active" aria-current="page">Contacto</li>
             </ol>
          </nav>
-         <h1>
-            Dejame tu comentario
-         </h1>
+         <h3>
+            Deja tu comentario 
+         </h3>
+         <div class="progress" style="height: 5px;">
+            <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+         </div>
          <form style="width:100%;">
             <div class="form-row">
                <div class="form-group col-md-6">
@@ -86,6 +91,7 @@
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
          </form>
+         </div>
  
          <footer>
             <div class = "row"> 
@@ -103,10 +109,10 @@
                </div>
                <div class ="col-sm-4 d-flex flex-column align-items-end">
                   <h3>
-                     Quer trabalhar conosco?
+                     Quieres trabajar con nosotros?
                   </h3><br>
                   <p>
-                     Mande-nos seu CV
+                     Envianos tu CV
                   </p><br>
                   <a href="#" class ="btn btn-primary">
                      Aqui
