--- a/precios.html
+++ b/precios.html
@@ -38,12 +38,33 @@
               <li class ="breadcrumb-item" aria-current="page">Home</li>
               <li class ="breadcrumb-item active" aria-current="page">Precios</li>
             </ol>
-        </nav>
+         </nav>  
       
 
+         <ul class="nav nav-pills" id="myLab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="compara-tab" data-bs-toggle="tab" data-toggle="pill" 
+              aria-current="page" role="tab" data-bs-target="#compara" aria-controls="compara"
+              aria-selected="true"
+              >Compara</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="tarjetas-tab" data-bs-toggle="tab" data-toggle="pill" data-bs-target="#tarjetas"
+              role="tab" aria-controls="tarjetas" aria-selected="false">Tarjetas</a>
+            </li>
+            <li class="nav-item" role="presentation">
+               <a class="nav-link" id="comentarios-tab" data-bs-toggle="tab" data-toggle="pill" data-bs-target="#comentarios"
+               role="tab" aria-controls="comentarios" aria-selected="false">Comentarios</a>
+             </li>
+            <!-- <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li> -->
+          </ul>
 
 
-
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="compara" role="tabpanel"
+               aria-labelledby="compara-tab">
       <div class="table-responsive">
         <table class="table table-striped">
             <thead class="thead-dark">
@@ -78,6 +99,8 @@
             </tbody>
         </table>
         </div>
+         </div>
+         <div class="tab-pane fade" id="tarjetas" role="tabpanel" aria-labelledby="tarjetas-tab">
         <div class="d-flex justify-content-center">
             <div class="card" style="width: 18rem;">
                 <div class="card-header" style="background-color: violet; color:white">
@@ -89,8 +112,13 @@
                     <li class="list-group-item">Pase Plata</li>
                 </ul>
             </div>
+         </div>
+         </div>
+         <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">
+            Comentarios sobre los productos.
+         </div>
 
-     </div>
+      </div>
 
          <footer>
             <div class = "row"> 
