--- a/index.html
+++ b/index.html
@@ -70,16 +70,44 @@
             </div>
         </div>
 
+        <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+               <div class="carousel-item active" data-bs-interval="2000">
+                  <img class="d-block w-100" src="clock.avif" alt="Primere slide">
+               </div>
+               <div class="carousel-item">
+                  <img class="d-block w-100" src="krypton.jpg" alt="Segundo slide">
+               </div>
+               <div class="carousel-item">
+                  <img class="d-block w-100" src="gelato.jpeg" alt="Tercer slide">
+               </div>        
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
+               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+               <span class="visually-hidden">Previous</span>
+             </button>
+             <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
+               <span class="carousel-control-next-icon" aria-hidden="true"></span>
+               <span class="visually-hidden">Next</span>
+             </button>
+         </div>
+
          <div class = "d-flex flex-wrap flex-row-reverse">
             <div class="card card-gadget d-flex flex-column justify-content-between ml-2">
                <img class="card-img-top" src="expanse.jpg" alt="imagen de gadget exp.">
                <div class="card-body">
-                  <h5 class = "card-title">Gadget expansionista</h5> 
+                  <h5 class = "card-title" data-bs-toggle="tooltip" data-bs-placement="top" title="Las primeras 10 encomiendas tienen envio gratis">Gadget expansionista</h5> 
                   <h6 class="card-subtitle text-muted">Surreal</h6>
                   <p class="card-text">Sirve para aumentar los espacios entre los atomos del objeto en expansion.</p>               
                </div>
                <div>
-                  <button class="btn btn-primary btn-compra">Comprar ya!</button>
+                  <button type="button" class="btn btn-primary btn-compra"
+                  data-bs-toggle="popover" data-bs-placement="right"
+                  data-bs-custom-class="custom-popover"
+                  data-bs-title="Atento"
+                  data-bs-content="Descuentos exclusivos con este item!">
+                  Comprar ya!
+                  </button>
                </div>
             </div>
 
@@ -91,7 +119,14 @@
                      <p class="card-text">Sirve para transformar movimiento en energia, tiene la particularidad de ser compatible con energía oscura.</p>               
                   </div>
                   <div>
-                     <button class="btn btn-primary btn-compra">Comprar ya!</button>
+                     <div>
+                        <button type="button" class="btn btn-primary btn-compra"
+                        data-bs-toggle="popover" data-bs-placement="right"
+                        data-bs-title="Atento!"
+                        data-bs-content="Descuentos exclusivos con este item!">
+                        Comprar ya!
+                        </button>
+                     </div>
                   </div>
                </div>
                <div class="card card-gadget d-flex flex-column justify-content-between ml-2">
@@ -106,7 +141,8 @@
                      data-bs-target="#contacto">Contacto</button>   
                   </div>
                   <div>
-                     <button class="btn btn-primary btn-compra">Comprar ya!</button>
+                     <button class="btn btn-primary btn-compra" data-bs-toggle="popover" title="Nuevo!" data-bs-content="Consulta accesorios disponibles">Comprar ya!</button>
+
                   </div>
                </div>
          </div>
@@ -118,9 +154,9 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
-                     <span aria-hidden="true">&times;</span>
-                  </button>
+                  <button type="button" class="btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
+                     Popover on top
+                   </button>
                 </div>
                 <div class="modal-body">
                   <forms>
@@ -137,7 +173,7 @@
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                   <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+                </div>                
               </div>
             </div>
           </div>
@@ -167,7 +203,6 @@
                      Aqui
                   </a>
                </div>
-
          </footer>
 
    </body>
@@ -175,4 +210,12 @@
    <script src="node_modules/jquery/dist/jquery.min.js"></script>
    <script src="node_modules/popper.js/dist/popper.min.js"></script>
    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+   <script>
+
+      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+      const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+      const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+      const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+   </script>   
 </html>
