--- a/about.html
+++ b/about.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
    <head>
-       	<meta charset = "utf-8">
-         <meta name="viewport" content="width=device-width, 
-         initial-scale=1,shrink-to-fit=no">
-         <!--Bootstrap CSS-->
-         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-         <link rel="stylesheet" href="styles.css">
-         <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
-         <title> TIMES Gadget </title>
+      <meta charset = "utf-8">
+      <meta name="viewport" content="width=device-width, 
+      initial-scale=1,shrink-to-fit=no">
+      <!--Bootstrap CSS-->
+      <!-- build:css dist/about.css-->
+      <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic-bootstrap.min.css">
+      <!--endbuild-->
+      
+      <title> TIMES Gadget </title>
    </head>
    <body>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -71,9 +74,10 @@
                </div>
 
          </footer>
-      
+      <!-- build:js dist/about.js-->
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/popper.js/dist/popper.min.js"></script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+      <!-- endbuild -->
    </body>
 </html>
