--- a/contacto.html
+++ b/contacto.html
@@ -5,10 +5,12 @@
          <meta name="viewport" content="width=device-width, 
          initial-scale=1,shrink-to-fit=no">
          <!--Bootstrap CSS-->
+         <!-- build:css dist/contacto.css-->
          <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
          <link rel="stylesheet" href="styles.css">
          <link rel="stylesheet" href="node_modules/open-iconic/font/css/open-iconic/bootstrap.min.css">
          <title> TIMES </title>
+         <!-- endbuild -->
    </head>
    <body>
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -122,8 +124,10 @@
 
          </footer>
       
+      <!-- build:js dist/contacto.js-->
       <script src="node_modules/jquery/dist/jquery.min.js"></script>
       <script src="node_modules/popper.js/dist/popper.min.js"></script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+      <!-- endbuild -->
    </body>
 </html>
