ult version, agregados packages como grunt y sus configuraciones.

--- a/index.html
+++ b/index.html
@@ -210,35 +210,9 @@
    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
    <!-- build:js dist/index.js -->
-   <script>
+   <script src="js/index.js">
 
-      const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
-      const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
-      const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
-      const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
-      // $('#contactoBtn').on('show.bs.modal',function(e){
-      //    console.log("el modal se esta mostrando")
-      // });
-      const myModalEl = document.getElementById('contacto')
-      myModalEl.addEventListener('show.bs.modal', event => {
-            console.log("el modal se esta mostrando");
-            $('#contactoBtn').removeClass("btn-outline-sucess");
-            $('#contactoBtn').addClass("btn-primary");
-            $('#contactoBtn').prop('disabled',true);
-      })
-      myModalEl.addEventListener('shown.bs.modal', event => {
-            console.log("el modal se mostro");
-      })
-      myModalEl.addEventListener('hide.bs.modal', event => {
-            console.log("el modal se esta escondiendo");
-      })
+   </script>
 
-      myModalEl.addEventListener('hidden.bs.modal', event => {
-            console.log("el modal se escondio");
-            $('#contactoBtn').removeClass("btn-primary");
-            $('#contactoBtn').addClass("btn-outline-sucess");
-            $('#contactoBtn').prop('disabled',false);
-      })
-   </script>   
    <!-- endbuild -->
 </html>
